org.lflang.lfc/test/resources/org/lflang/lfc/tests/emptyFile.stderr
lfc: error: mismatched input '<EOF>' expecting 'target'
--> %%%PATH.lf%%%:1:1
  |
1 | 
  | ^ mismatched input '<EOF>' expecting 'target'
  |
2 | 

